##Text encoding: utf-8

2006-05-09  Jean Bréfort  <jean.brefort@normalesup.org>
	* programs/crystal/application.cc: add a comment.
	* programs/crystal/document.cc: reimplement add/remove views.
	* programs/crystal/document.h: ditto.
	* programs/crystal/window.cc: ditto.
	* programs/crystal/window.h: ditto.

2006-05-08  Jean Bréfort  <jean.brefort@normalesup.org>
	* configure.ac: needs goffice >= 0.3.1.
	* programs/crystal/application.cc: reimplemented printing.
	* programs/crystal/document.h: ditto.
	* programs/crystal/view.cc: ditto.

2006-05-07  Jean Bréfort  <jean.brefort@normalesup.org>
	* gcu/crystalview.cc: add CrystalView::SaveAsImage.
	* gcu/crystalview.h: ditto.
	* programs/crystal/application.cc: reimplemented image export.
	* programs/crystal/document.cc: add gcDocumentSaveAsImage.
	* programs/crystal/document.h: ditto.
	* programs/crystal/main.cc: call gnome_vfs_shutdown on exit.
	* programs/crystal/view.cc: removed obsolete gcView::OnExportPNG and
	gcView::OnExportJPEG.
	* programs/crystal/view.h:

2006-05-06  Jean Bréfort  <jean.brefort@normalesup.org>
	* configure.ac: add a check for <sstream>.
	* gcu/application.h: changed FileProcess signature to add a mime type.
	* gcu/crystaldoc.cc: use xmlDocSetRootElement instead of =.
	* gcu/filechooser.cc: add a combo box for supported mime type and pass
	the mime type to Application::FileProcess.
	* programs/crystal/application.cc: update FileProcess to support the mime
	type and add vrml export support there.
	* programs/crystal/application.h: changed FileProcess signature.
	* programs/crystal/document.cc: export VRML using gnome-vfs.
	* programs/crystal/document.h: change signature for OnExportVRML.
	* programs/crystal/main.cc: use new signature of Application::FileProcess.
	* programs/crystal/window.cc: implement export VRML.
	* programs/crystal/window.h: add an inline method to get the associated
	view.

2006-05-04  Jean Bréfort  <jean.brefort@normalesup.org>
